# msgraphfs

./: .pre-commit-config.yaml  README.md  TESTING.md  pyproject.toml
.github/: .pre-commit.yml
.github/workflows/: ci.yml  release.yml  test.yml
src/msgraphfs/: __init__.py  core.py
src/sharepointfs/: __init__.py  core.py
tests/: conftest.py  content.py  test_fsspec_integration.py  test_live_url_features.py  test_oauth2.py  test_read.py  test_url_parsing.py  test_write.py
