[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharepointfs"
authors = [{name = "Laurent Mignon", email = "laurent.mignon@acsone.eu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "fsspec>=0.7.5",
    "httpx[http2]",
    "authlib",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage[toml]",
]
mypy = [
    "mypy>=1.4.1",
]
release = [
    "towncrier",
    "bumpversion",
]

[project.entry-points."fsspec.specs"]
sharepointfs="sharepointfs.SharepointFS"

[project.urls]
Source = "https://github.com/acsone/sharepointfs"

[tool.hatch.version]
path="src/sharepointfs/version.py"


[tool.hatch.build]
include = ["src/sharepointfs"]
directory = "dist"

[tool.hatch.build.targets.wheel]
sources = ["src", "tmp"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
branch = true
source_pkgs = ["sharepointfs"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",
]
ignore = [
    "E501",  # line too long, handled by black
 ]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.mypy.overrides]]
implicit_reexport = true

[[tool.mypy.overrides]]
implicit_reexport = true

[tool.towncrier]
name = "Sharepoint fsspec adapter"
package = "sharepointfs"
package_dir = "src"
filename = "HISTORY.md"
directory = "news"
issue_format = "`#[{issue}](https://acsone.plan.io/issues/{issue}>`_"
title_format = "{version} ({project_date})"
